--- a/ProjectTest/MainWindow.xaml
+++ b/ProjectTest/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ProjectTest.MainWindow"
+<Window x:Class="ProjectTest.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -15,11 +15,12 @@
         FontSize="15" 
         WindowStartupLocation="CenterScreen">
     
-    <Grid Margin="0,10,0,0">
+    <Grid Margin="0,10,0,0"
+          x:Name="Container">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -94,32 +95,30 @@
         <DataGrid x:Name="add" Grid.Row="2"
                   Grid.ColumnSpan="3"
                   CanUserAddRows="True"
-                  EnableRowVirtualization="True"
                   HorizontalGridLinesBrush="DarkGray" 
                   AutoGenerateColumns="False"
                   RowBackground="LightGray" 
                   AlternatingRowBackground="White" 
                   ItemsSource="{Binding Path=ListTable, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                  VerticalScrollBarVisibility="Auto"
-                  HorizontalScrollBarVisibility="Auto" 
+                  ScrollViewer.CanContentScroll="True" 
+                  ScrollViewer.VerticalScrollBarVisibility="Auto"
                   PreviewKeyDown="CheckSpace" 
                   PreviewTextInput="CheckText" 
                   AddingNewItem="AddFunction" 
                   InitializingNewItem="DeleteLastElement">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="f(x, y)"
-                                    Width="50"
+                                    Width="70"
                                     Binding="{Binding Path=FunctionValue, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
-                
+
                 <DataGridTextColumn Header="X" 
-                                    Width="50"
+                                    Width="70"
                                     Binding="{Binding Path=X, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                
+
                 <DataGridTextColumn Header="Y" 
-                                    Width="50"
+                                    Width="70"
                                     Binding="{Binding Path=Y, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </DataGrid.Columns>
-            
         </DataGrid>
     </Grid>
 </Window>
